# .md-to-.docs

./: README.md  md_to_docx_converter.py  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml  python-package.yml
