[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "md-to-docx-converter"
version = "1.0.0"
description = "A tool to convert Markdown files to Microsoft Word (DOCX) format"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Adryan Serage", email = "adryserage@gmail.com" }
]
dependencies = [
    "python-docx",
    "markdown"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pylint>=2.17",
    "bandit>=1.7",
    "build",
    "twine"
]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=md_to_docx_converter"
testpaths = ["tests"]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
]
